<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dinith.baxtercontroller.MainActivity">

    <Button
        android:id="@+id/jointsActivityBtn"
        android:layout_width="165dp"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:text="@string/joints_btn"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/xyzActivityBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/xyzActivityBtn"
        android:layout_width="165dp"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:text="@string/xyz_btn"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/scriptsActivityBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scriptsActivityBtn"
        android:layout_width="165dp"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:text="@string/scripts_btn"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cameraActivityBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cameraActivityBtn"
        android:layout_width="165dp"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:text="@string/camera_btn"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsActivityBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingsActivityBtn"
        android:layout_width="165dp"
        android:layout_height="75dp"
        android:layout_marginBottom="45dp"
        android:background="@android:color/transparent"
        android:text="@string/settings_btn"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="222dp"
        android:layout_height="134dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/main_title_baxter_controller"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
